force-app/main/default/objects/aecm__Solution_Story__c/aecm__Solution_Story__c.object-meta.xml
<CustomObject>
    <description>Container for an early lifecycle story related to a solution design. Not intended to replace a CMC story where an integration to Appirio CMC exists.</description>
    <label>Solution Story</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>