force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Acceptance__c.field-meta.xml
<CustomField>
    <fullName>aecm__Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, indicates the story has been accepted as complete and ready for delivery.</inlineHelpText>
    <label>Acceptance</label>
    <type>Checkbox</type>
</CustomField>