force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>aecm__Acceptance_Criteria__c</fullName>
    <label>Acceptance Criteria</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>