force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>aecm__Acceptance_Date__c</fullName>
    <label>Acceptance Date</label>
    <type>DateTime</type>
</CustomField>