force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Acceptance_Note__c.field-meta.xml
<CustomField>
    <fullName>aecm__Acceptance_Note__c</fullName>
    <label>Acceptance Note</label>
    <type>TextArea</type>
</CustomField>