force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>aecm__Accepted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accepted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>