force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>aecm__Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Stories1</relationshipName>
    <type>Lookup</type>
</CustomField>