force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Capability__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Capability this story is related to. This relationship enables reporting backlog by capability.</inlineHelpText>
    <label>Capability</label>
    <referenceTo>aecm__Capability__c</referenceTo>
    <relationshipLabel>Solution Stories</relationshipLabel>
    <relationshipName>Solution_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>