force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Epic__c.field-meta.xml
<CustomField>
    <fullName>aecm__Epic__c</fullName>
    <inlineHelpText>Name of Epic this story is related to in company backlog management system.</inlineHelpText>
    <label>Epic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>