force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Requirements_Owner__c.field-meta.xml
<CustomField>
    <fullName>aecm__Requirements_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requirements Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Stories2</relationshipName>
    <type>Lookup</type>
</CustomField>