force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Solution_Design__c.field-meta.xml
<CustomField>
    <fullName>aecm__Solution_Design__c</fullName>
    <inlineHelpText>Related parent solution record for this story. Stories must map to a solution, however can be reparented to a different solution design if needed.</inlineHelpText>
    <label>Solution Design</label>
    <referenceTo>aecm__Solution_Design__c</referenceTo>
    <relationshipLabel>Solution Stories</relationshipLabel>
    <relationshipName>Discovery_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>