force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Sprint__c.field-meta.xml
<CustomField>
    <fullName>aecm__Sprint__c</fullName>
    <inlineHelpText>Name of Sprint this story is related to in company backlog management system.</inlineHelpText>
    <label>Sprint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>