force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Story_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Story_Name__c</fullName>
    <label>Story Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>