force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>aecm__Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>aecm__Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Pending Assumption Updates</fullName>
            </value>
            <value>
                <fullName>Pending Acceptance Criteria Updates</fullName>
            </value>
            <value>
                <fullName>Grooming</fullName>
            </value>
            <value>
                <fullName>Pending Sign-Off</fullName>
            </value>
            <value>
                <fullName>Awaiting Solution</fullName>
            </value>
            <value>
                <fullName>Review for Cancel</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>In Story Development</fullName>
            </value>
            <value>
                <fullName>Tech Review Started</fullName>
            </value>
            <value>
                <fullName>Business Review Started</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Poor Quality</fullName>
            </value>
            <value>
                <fullName>Next Year</fullName>
            </value>
            <value>
                <fullName>Next Epic</fullName>
            </value>
            <value>
                <fullName>Next Spint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>