force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__Tech_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>aecm__Tech_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Stories3</relationshipName>
    <type>Lookup</type>
</CustomField>