force-app/main/default/objects/aecm__Solution_Story__c/fields/aecm__User_Story__c.field-meta.xml
<CustomField>
    <fullName>aecm__User_Story__c</fullName>
    <label>User Story</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>