force-app/main/default/objects/aecm__Solution_Story__c/fields/YG_Complexity__c.field-meta.xml
<CustomField>
    <fullName>YG_Complexity__c</fullName>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <color>#A53711</color>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#F3D904</color>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#78C953</color>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>