force-app/main/default/objects/aecm__Solution_Story__c/fields/YG_Dev_LOE__c.field-meta.xml
<CustomField>
    <fullName>YG_Dev_LOE__c</fullName>
    <label>Dev LOE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>